--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,3 +1,119 @@
+* {
+  margin: 0px;
+  padding: 0px;
+  box-sizing: border-box; }
 
+nav {
+  position: absolute;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  min-height: 8vh;
+  background-color: #33333375;
+  width: 100%; }
+
+.logo {
+  color: #e2e2e2;
+  text-transform: uppercase;
+  letter-spacing: 5px;
+  font-size: 20px; }
+
+.nav-links {
+  display: flex;
+  justify-content: space-around;
+  width: 40%; }
+
+.nav-links li {
+  list-style: none; }
+
+.nav-links a {
+  color: #e2e2e2;
+  text-decoration: none;
+  letter-spacing: 3px;
+  font-weight: bold;
+  font-size: 25px; }
+  .nav-links a:hover {
+    color: black; }
+
+.burger {
+  display: none; }
+
+.burger div {
+  width: 38px;
+  height: 3px;
+  background-color: #e2e2e2;
+  margin: 5px;
+  transition: all 0.3s ease-in; }
+
+@media screen and (max-width: 1024px) {
+  .nav-links {
+    width: 50%; } }
+@media screen and (max-width: 768px) {
+  #menu,
+  body {
+    overflow-x: hidden;
+    width: 100%; }
+
+  .nav-links {
+    position: absolute;
+    right: 0;
+    height: 92vh;
+    top: 8vh;
+    background-color: #33333375;
+    display: flex;
+    flex-direction: column;
+    text-align: center;
+    width: 50%;
+    transform: translateX(100%);
+    transition: transform 0.5s ease-in; }
+
+  .nav-links li {
+    opacity: 0; }
+
+  .burger {
+    display: block;
+    cursor: pointer; } }
+.nav-active {
+  transform: translateX(0%); }
+
+@keyframes navLinkFade {
+  from {
+    opacity: 0;
+    transform: translateX(50px); }
+  to {
+    opacity: 1;
+    transform: translateX(0px); } }
+.toggle .line1 {
+  transform: rotate(-45deg) translate(-5px, 6px); }
+
+.toggle .line2 {
+  opacity: 0; }
+
+.toggle .line3 {
+  transform: rotate(45deg) translate(-5px, -6px); }
+
+#home {
+  background-image: url(/media/pictures/bg.png);
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+  width: 100vw;
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  text-align: center; }
+  #home h1 {
+    width: 60vw;
+    margin: 0 auto;
+    padding-top: 40vh;
+    color: white;
+    font-size: 3.5rem;
+    letter-spacing: 2px;
+    border-bottom: 3px solid white;
+    text-shadow: 4px 5px 2px rgba(78, 78, 78, 0.37); }
+  #home h2 {
+    font-size: 3rem;
+    color: white;
+    letter-spacing: 3px; }
 
 /*# sourceMappingURL=styles.css.map */
