--- a/styles/scss/_home.scss
+++ b/styles/scss/_home.scss
@@ -13,12 +13,12 @@
     h1{
         width: 60vw;
         margin: 0 auto;
-        padding-top: 40vh ;
+        padding-top: 38vh ;
         color:white;
         font-size: 3.5rem;
         letter-spacing: 2px;
         border-bottom: 3px solid white;
-        text-shadow: 4px 5px 2px rgba(78, 78, 78, 0.37);
+        text-shadow: 4px 5px 2px rgba(82, 82, 82, 0.671);
     }
     h2{
         font-size: 3rem;
@@ -26,4 +26,62 @@
         letter-spacing: 3px;
     }
 
+}
+
+.buttons-div{
+    padding-top: 1vw;
+
+    >div{
+        display: inline-block;
+        height: 30px;
+        width: 30px;
+        margin-top: 50px;
+        background-color: rgba(255, 255, 255, 0.575);
+        border:2px solid black;
+        transform: rotate(45deg);
+    }
+    button{
+        width: 300px;
+        height: 60px;
+        margin: 50px;
+        margin-left: 5%;
+        margin-right: 5%;
+        background-color: rgba(124, 124, 124, 0.808);
+        color: white;
+        font-size: 30px;
+        font-weight: bold;
+        letter-spacing: 3px;
+        border:4px solid rgb(124, 124, 124);
+
+        &:hover{
+            background-color: rgb(48, 48, 48);
+            border-color: rgb(73, 73, 73);
+        }
+    }
+}
+
+#icons{
+    display: flex;
+    position: absolute;
+    right: 5%;
+    bottom: 5%;
+    background-color: rgba(255, 255, 255, 0.103);
+
+    li{
+        list-style: none;
+    }
+
+    img{
+        width: 90px;
+        height: 100px;
+        margin: 15px;
+    }
+}
+
+
+
+#about{
+    width: 100vw;
+    height: 100vh;
+    background-color: red;
 }
