--- a/styles/scss/_home.scss
+++ b/styles/scss/_home.scss
@@ -24,6 +24,7 @@
         font-size: 3rem;
         color:white;
         letter-spacing: 3px;
+        text-shadow: 4px 5px 2px rgba(0, 0, 0, 0.671);
     }
 
 }
@@ -36,10 +37,11 @@
         height: 30px;
         width: 30px;
         margin-top: 50px;
-        background-color: rgba(255, 255, 255, 0.575);
+        background-color: rgb(255, 255, 255);
         border:2px solid black;
         transform: rotate(45deg);
     }
+
     button{
         width: 300px;
         height: 60px;
@@ -53,11 +55,29 @@
         letter-spacing: 3px;
         border:4px solid rgb(124, 124, 124);
 
-        &:hover{
-            background-color: rgb(48, 48, 48);
-            border-color: rgb(73, 73, 73);
-        }
     }
+
+    a:first-child button{
+        background-color: rgba(68, 0, 255, 0.678);
+        border:4px solid rgb(62, 0, 233);
+
+        &:hover{
+            background-color: rgba(68, 0, 255, 0.925);
+        }
+
+    }
+
+    a:last-child button{
+        background-color: rgba(179, 0, 0, 0.678);
+        border:4px solid rgba(179, 0, 0, 0.993);
+
+        &:hover{
+            background-color: rgb(153, 0, 0);
+        }
+
+    }
+
+
 }
 
 #icons{
@@ -65,7 +85,7 @@
     position: absolute;
     right: 5%;
     bottom: 5%;
-    background-color: rgba(255, 255, 255, 0.103);
+    background-color: rgba(255, 255, 255, 0.171);
 
     li{
         list-style: none;
@@ -79,9 +99,31 @@
 }
 
 
+@media screen and (max-width:900px){
 
-#about{
-    width: 100vw;
-    height: 100vh;
-    background-color: red;
+    #home h1{
+        padding-top: 25vh;
+    }
+
+    .buttons-div {
+        width: 100vw;
+        display: flex;
+        flex-direction: column;
+        padding-top: 5vh;
+        div{
+            margin: auto;
+        }
+
+        button{
+            margin: 2%;
+        }
+    }
+
+    #icons{
+        position: relative;
+        margin: auto;
+        right: 0;
+        bottom: 0;
+    }
+
 }
