--- a/styles/scss/_home.scss
+++ b/styles/scss/_home.scss
@@ -1,6 +1,6 @@
 #home{
 
-    background-image: url(/media/pictures/bg.png);
+    background-image: url('/media/pictures/bg.png');
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
@@ -58,7 +58,7 @@
     }
 
     a:first-child button{
-        background-color: rgba(68, 0, 255, 0.678);
+        background-color: rgba(68, 0, 255, 0.5);
         border:4px solid rgb(62, 0, 233);
 
         &:hover{
@@ -68,7 +68,7 @@
     }
 
     a:last-child button{
-        background-color: rgba(179, 0, 0, 0.678);
+        background-color: rgba(179, 0, 0, 0.5);
         border:4px solid rgba(179, 0, 0, 0.993);
 
         &:hover{
@@ -99,7 +99,7 @@
 }
 
 
-@media screen and (max-width:900px){
+@media only screen and (max-width:900px){
 
     #home h1{
         padding-top: 25vh;
@@ -109,7 +109,7 @@
         width: 100vw;
         display: flex;
         flex-direction: column;
-        padding-top: 5vh;
+        padding-top: 10vh;
         div{
             margin: auto;
         }
