--- a/styles/scss/_home.scss
+++ b/styles/scss/_home.scss
@@ -1,6 +1,6 @@
 #home{
 
-    background-image: url('/media/pictures/bg.png');
+    background-image: url('../media/pictures/bg.png');
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
