--- a/styles/scss/_home.scss
+++ b/styles/scss/_home.scss
@@ -14,8 +14,9 @@
         width: 60vw;
         margin: 0 auto;
         padding-top: 38vh ;
+        padding-bottom: 2vh;
         color:white;
-        font-size: 3.5rem;
+        font-size: 5rem;
         letter-spacing: 2px;
         border-bottom: 3px solid white;
         text-shadow: 4px 5px 2px rgba(82, 82, 82, 0.671);
@@ -99,23 +100,21 @@
 }
 
 
-@media only screen and (max-width:900px){
+@media only screen and (max-width:1024px) and (orientation: landscape){
 
     #home h1{
         padding-top: 25vh;
     }
 
-    .buttons-div {
-        width: 100vw;
-        display: flex;
-        flex-direction: column;
-        padding-top: 10vh;
-        div{
-            margin: auto;
-        }
-
+    .buttons-div{
         button{
-            margin: 2%;
+            font-size: 1.5rem;
+            width: 250px;
+            height: 50px;
+        }
+        div{
+            height: 20px;
+            width: 20px;
         }
     }
 
@@ -124,6 +123,51 @@
         margin: auto;
         right: 0;
         bottom: 0;
+
+        img{
+            width: 50px;
+            height: 50px;
+        }
+    }
+}
+
+
+@media only screen and (max-width:1024px) and (orientation: portrait){
+
+    #home{
+        h1{
+            width: 80%;
+            padding-top: 30vh;
+            font-size: 6rem;
+        }
+
+        h2{
+            font-size: 4rem;
+        }
+    }
+
+    .buttons-div{
+        padding-top: 10vh;
+        display: flex;
+        flex-direction: column;
+
+        div{
+            margin: auto;
+        }
+
+        button{
+            width: 500px;
+            height: 105px;
+        }
+    }
+
+    #icons{
+        width: 100vw;
+        position: relative;
+        margin: auto;
+        right: 0;
+        bottom: 0;
+        justify-content: space-around;
     }
 
 }
