--- a/styles/styles.css
+++ b/styles/styles.css
@@ -55,7 +55,7 @@ nav {
 @media screen and (max-width: 1200px) {
   .nav-links {
     width: 50%; } }
-@media screen and (max-width: 900px) {
+@media screen and (max-width: 1024px) {
   body {
     overflow-x: hidden;
     width: 100%; }
@@ -112,8 +112,9 @@ nav {
     width: 60vw;
     margin: 0 auto;
     padding-top: 38vh;
+    padding-bottom: 2vh;
     color: white;
-    font-size: 3.5rem;
+    font-size: 5rem;
     letter-spacing: 2px;
     border-bottom: 3px solid white;
     text-shadow: 4px 5px 2px rgba(82, 82, 82, 0.671); }
@@ -169,24 +170,50 @@ nav {
     height: 100px;
     margin: 15px; }
 
-@media only screen and (max-width: 900px) {
+@media only screen and (max-width: 1024px) and (orientation: landscape) {
   #home h1 {
     padding-top: 25vh; }
 
-  .buttons-div {
-    width: 100vw;
-    display: flex;
-    flex-direction: column;
-    padding-top: 10vh; }
-    .buttons-div div {
-      margin: auto; }
-    .buttons-div button {
-      margin: 2%; }
+  .buttons-div button {
+    font-size: 1.5rem;
+    width: 250px;
+    height: 50px; }
+  .buttons-div div {
+    height: 20px;
+    width: 20px; }
 
   #icons {
     position: relative;
     margin: auto;
     right: 0;
-    bottom: 0; } }
+    bottom: 0; }
+    #icons img {
+      width: 50px;
+      height: 50px; } }
+@media only screen and (max-width: 1024px) and (orientation: portrait) {
+  #home h1 {
+    width: 80%;
+    padding-top: 30vh;
+    font-size: 6rem; }
+  #home h2 {
+    font-size: 4rem; }
+
+  .buttons-div {
+    padding-top: 10vh;
+    display: flex;
+    flex-direction: column; }
+    .buttons-div div {
+      margin: auto; }
+    .buttons-div button {
+      width: 500px;
+      height: 105px; }
+
+  #icons {
+    width: 100vw;
+    position: relative;
+    margin: auto;
+    right: 0;
+    bottom: 0;
+    justify-content: space-around; } }
 
 /*# sourceMappingURL=styles.css.map */
