--- a/styles/scss/_home.scss
+++ b/styles/scss/_home.scss
@@ -9,6 +9,7 @@
     display: flex;
     flex-direction: column;
     text-align: center;
+    box-shadow: 13px 8px 22px 5px rgba(0,0,0,0.59);
 
     h1{
         width: 60vw;
