--- a/styles/scss/_portfolio.scss
+++ b/styles/scss/_portfolio.scss
@@ -1,5 +1,29 @@
 #portfolio{
-    width: 100vw;
-    height: 100vh;
-    background-color: red;
+    width: 70vw;
+    margin: 0 auto;
+    padding-top: 10vh;
+    text-align: center;
+
+    >h1{
+        font-size: 5rem;
+    }
+
+    #projects-list{
+        padding-top: 10vh;
+        width: 100%;
+        display: grid;
+        grid-template-columns: repeat(3, 1fr);
+        grid-auto-rows: 300px;
+        grid-gap: 20px;
+
+        .project{
+            height: 10vh;
+            padding: 20px;
+        }
+    }
+}
+
+
+.project-info{
+
 }
