--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,3 +1,13 @@
+@keyframes slide-in {
+  0% {
+    height: 0%; }
+  100% {
+    height: 100%; } }
+@keyframes slide-out {
+  0% {
+    height: 100%; }
+  100% {
+    height: 0%; } }
 #portfolio {
   width: 70vw;
   margin: 0 auto;
@@ -13,8 +23,25 @@
     grid-auto-rows: 300px;
     grid-gap: 20px; }
     #portfolio #projects-list .project {
-      height: 10vh;
-      padding: 20px; }
+      background-color: brown;
+      contain: strict; }
+      #portfolio #projects-list .project li {
+        list-style: none;
+        font-size: 1.2rem; }
+
+.project-cover {
+  height: 100%;
+  width: 100%;
+  background-color: grey;
+  animation-name: slide-in;
+  animation-duration: 0.5s;
+  height: 100%;
+  z-index: 999; }
+
+.project:hover > .project-cover {
+  animation-name: slide-out;
+  animation-duration: 0.5s;
+  height: 0%; }
 
 * {
   margin: 0px;
