--- a/styles/scss/_portfolio.scss
+++ b/styles/scss/_portfolio.scss
@@ -24,6 +24,7 @@
     margin: 0 auto;
     padding-top: 10vh;
     text-align: center;
+    padding-bottom: 10vh;
 
     >h1{
         font-size: 5rem;
