--- a/styles/scss/_aboutMe.scss
+++ b/styles/scss/_aboutMe.scss
@@ -1,9 +1,10 @@
 #about-me{
-    border-top: 2px solid grey;
+    width: 100vw;
     background-color: rgba(148, 148, 148, 0.26);
+    text-align: center;
 
     h1{
-        display: inline-block;
+        font-size: 3rem;
     }
 
 }
