--- a/styles/styles.css
+++ b/styles/styles.css
@@ -14,8 +14,17 @@
   padding-top: 10vh;
   text-align: center;
   padding-bottom: 10vh; }
-  #portfolio > h1 {
-    font-size: 5rem; }
+  #portfolio > div:first-child {
+    display: flex; }
+    #portfolio > div:first-child div {
+      margin: 25px;
+      margin-top: 35px;
+      width: 30vw;
+      height: 5px;
+      background-color: rgba(0, 0, 0, 0.541); }
+    #portfolio > div:first-child h1 {
+      font-size: 3rem;
+      font-weight: bold; }
   #portfolio #projects-list {
     padding-top: 10vh;
     width: 100%;
@@ -44,6 +53,13 @@
   animation-duration: 0.5s;
   height: 0%; }
 
+@media screen and (max-width: 1200px) {
+  #portfolio #projects-list {
+    grid-template-columns: repeat(2, 1fr); } }
+@media screen and (max-width: 1024px) {
+  #portfolio #projects-list {
+    grid-template-columns: repeat(1, 1fr);
+    grid-gap: 10px; } }
 * {
   margin: 0px;
   padding: 0px;
@@ -199,22 +215,10 @@ nav {
     .buttons-div a:last-child button:hover {
       background-color: #990000; }
 
-#icons {
-  display: flex;
-  position: absolute;
-  right: 5%;
-  bottom: 5%;
-  background-color: rgba(255, 255, 255, 0.171); }
-  #icons li {
-    list-style: none; }
-  #icons img {
-    width: 90px;
-    height: 100px;
-    margin: 15px; }
-
 @media only screen and (max-width: 1024px) and (orientation: landscape) {
   #home h1 {
-    padding-top: 25vh; }
+    padding-top: 15vh;
+    font-size: 3rem; }
 
   .buttons-div button {
     font-size: 1.5rem;
@@ -235,7 +239,7 @@ nav {
 @media only screen and (max-width: 1024px) and (orientation: portrait) {
   #home h1 {
     width: 80%;
-    padding-top: 30vh;
+    padding-top: 15vh;
     font-size: 6rem; }
   #home h2 {
     font-size: 4rem; }
@@ -248,19 +252,15 @@ nav {
       margin: auto; }
     .buttons-div button {
       width: 500px;
-      height: 105px; }
-
-  #icons {
-    width: 100vw;
-    position: relative;
-    margin: auto;
-    right: 0;
-    bottom: 0;
-    justify-content: space-around; } }
+      height: 105px; } }
 #about-me {
-  border-top: 2px solid grey;
-  background-color: rgba(148, 148, 148, 0.26); }
+  width: 100vw;
+  background-color: rgba(148, 148, 148, 0.26);
+  text-align: center; }
   #about-me h1 {
-    display: inline-block; }
+    font-size: 3rem; }
+
+body {
+  overflow-x: hidden; }
 
 /*# sourceMappingURL=styles.css.map */
