--- a/styles/scss/_aboutMe.scss
+++ b/styles/scss/_aboutMe.scss
@@ -2,6 +2,7 @@
     width: 100vw;
     background-color: rgba(148, 148, 148, 0.26);
     text-align: center;
+    padding-bottom: 10vh;
 
     h1{
         padding-top: 2vh;
