--- a/styles/scss/_footer.scss
+++ b/styles/scss/_footer.scss
@@ -1,17 +1,18 @@
 #footer{
+    height: 7vh;
     margin: auto;
     background-color: grey;
     display: flex;
     justify-content: space-between;
 
     >h1{
-        padding-right: 10vw;
-        font-size: 1.5rem;
+        padding-right: 5vw;
+        font-size: 1.2rem;
         padding-top: 20px;
         color: white;
     }
     >span{
-        padding: 10px;
+        padding: 15px;
         display: flex;
         width: 20%;
         justify-content: space-around;
@@ -20,12 +21,20 @@
             font-size: 2rem;
             padding-left: 10vw;
             padding-right: 5vw;
+            padding-top: 5px;
+            color: white;
         }
 
         a img{
-            width: 35px;
-            height: 35px;
+            width: 40px;
+            height: 40px;
             margin: 10px;
+
+            &:hover{
+                background-color: black;
+                border-radius: 100%;
+                border: 1px solid black;
+            }
         }
     }
 }
