--- a/styles/scss/style.scss
+++ b/styles/scss/style.scss
@@ -6,8 +6,20 @@
         'footer';
 
 
-
+html{
+    scroll-behavior: smooth;
+}
 
 body{
     overflow-x: hidden;
+}
+
+html::-webkit-scrollbar {
+    display: none;
+  }
+
+  /* Hide scrollbar for IE, Edge and Firefox */
+html{
+    -ms-overflow-style: none;  /* IE and Edge */
+    scrollbar-width: none;  /* Firefox */
 }
