--- a/styles/scss/_aboutMe.scss
+++ b/styles/scss/_aboutMe.scss
@@ -3,6 +3,7 @@
     background-color: rgba(148, 148, 148, 0.26);
     text-align: center;
     padding-bottom: 10vh;
+    box-shadow: 5px 5px 15px 5px rgba(0, 0, 0, 0.274);
 
     h1{
         padding-top: 2vh;
