--- a/styles/styles.css
+++ b/styles/styles.css
@@ -355,7 +355,8 @@ nav {
   width: 100vw;
   background-color: rgba(148, 148, 148, 0.26);
   text-align: center;
-  padding-bottom: 10vh; }
+  padding-bottom: 10vh;
+  box-shadow: 5px 5px 15px 5px rgba(0, 0, 0, 0.274); }
   #about-me h1 {
     padding-top: 2vh;
     font-size: 3rem; }
