--- a/styles/scss/_aboutMe.scss
+++ b/styles/scss/_aboutMe.scss
@@ -20,14 +20,15 @@
     >span{
         padding-top: 5vh;
         margin: auto;
-        width: 80%;
+        width: 90%;
         display: flex;
-        justify-content: space-around;
+        justify-content: space-evenly;
         div{
-            padding:20px;
+
+            width: 28%;
 
             p{
-                font-size: 1.2rem;
+                font-size: 1.25rem;
             }
             img{
                 width: 100px;
@@ -41,8 +42,19 @@
 }
 
 @media screen and (max-width:1200px){
-    #about-me span{
+    #about-me >span{
         flex-direction: column;
+        div{
+            width: 100%;
+            margin: auto;
+            justify-content: center;
+            text-align: center;
+            padding-bottom: 5vh;
+            img{
+                width: 200px;
+                height: 200px;
+            }
+        }
     }
 
 }
