--- a/styles/scss/_footer.scss
+++ b/styles/scss/_footer.scss
@@ -38,3 +38,29 @@
         }
     }
 }
+
+@media(max-width:1280px) and (orientation: landscape){
+    #footer{
+        height: 15vh;
+    }
+}
+
+@media(max-width:1280px) and (orientation: portrait){
+    #footer{
+        >span{
+            width: 50%;
+            >p{
+                font-size: 2.5rem;
+            }
+            a img{
+                width: 80px;
+                height: 80px;
+            }
+        }
+        >h1{
+            margin-left: 10%;
+            font-size: 1.5rem;
+        }
+    }
+}
+
