--- a/styles/scss/_contact.scss
+++ b/styles/scss/_contact.scss
@@ -47,7 +47,6 @@
     >#details{
         margin-top: 15px;
         margin-bottom: 15vh;
-        padding: 60px;
         background-color: rgba(0, 0, 0, 0.3);
         >ul{
             text-align: center;
@@ -57,7 +56,6 @@
                 padding-bottom: 15px;
             }
             >li{
-                width: 70%;
                 padding: 10px;
                 margin: 0 auto;
                 font-size: 1.3rem;
@@ -112,12 +110,11 @@
             width: 40vw;
             height: 25vh;
             padding:50px;
-            margin-top: 100px;
-            margin-left: 100px;
             background-color: rgba(0, 0, 0, 0.0);
             >ul{
                 width: 100%;
                 padding:50px;
+                padding-bottom: 100px;;
                 text-align: center;
                 list-style: none;
                 background-color: rgba(0, 0, 0, 0.3);
@@ -131,6 +128,7 @@
                 };
 
                 >li:last-child:hover{
+                    font-weight: bold;
                     border-bottom: 3px red solid;
                     cursor: pointer;
                 }
