--- a/styles/scss/_footer.scss
+++ b/styles/scss/_footer.scss
@@ -47,6 +47,7 @@
 
 @media(max-width:1280px) and (orientation: portrait){
     #footer{
+        height: auto;
         >span{
             width: 50%;
             >p{
