--- a/styles/scss/_portfolio.scss
+++ b/styles/scss/_portfolio.scss
@@ -20,7 +20,7 @@
 
 
 #portfolio{
-    width: 70vw;
+    width: 80vw;
     margin: 0 auto;
     padding-top: 10vh;
     text-align: center;
@@ -48,15 +48,33 @@
         display: grid;
         grid-template-columns: repeat(3, 1fr);
         grid-auto-rows: 300px;
-        grid-gap: 20px;
+        grid-gap: 5px;
 
         .project{
             opacity: 0;
             background-color: brown;
             contain: strict;
+            ul{
+                padding-bottom: 5%;
+            }
+
             li{
                 list-style: none;
                 font-size: 1.2rem;
+            }
+
+            a{
+                font-size: 1.2rem;
+                padding: 20px;
+                padding-bottom: 5px;
+                color: black;
+                font-weight: bold;
+                text-decoration: none;
+
+                &:hover{
+                    color: white;
+                    border-bottom: 2px solid red;
+                }
             }
         }
     }
