--- a/styles/styles.css
+++ b/styles/styles.css
@@ -9,7 +9,7 @@
   100% {
     height: 0%; } }
 #portfolio {
-  width: 70vw;
+  width: 80vw;
   margin: 0 auto;
   padding-top: 10vh;
   text-align: center;
@@ -31,14 +31,26 @@
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     grid-auto-rows: 300px;
-    grid-gap: 20px; }
+    grid-gap: 5px; }
     #portfolio #projects-list .project {
       opacity: 0;
       background-color: brown;
       contain: strict; }
+      #portfolio #projects-list .project ul {
+        padding-bottom: 5%; }
       #portfolio #projects-list .project li {
         list-style: none;
         font-size: 1.2rem; }
+      #portfolio #projects-list .project a {
+        font-size: 1.2rem;
+        padding: 20px;
+        padding-bottom: 5px;
+        color: black;
+        font-weight: bold;
+        text-decoration: none; }
+        #portfolio #projects-list .project a:hover {
+          color: white;
+          border-bottom: 2px solid red; }
 
 .project-cover {
   height: 100%;
@@ -166,7 +178,8 @@ nav {
   display: flex;
   flex-direction: column;
   text-align: center;
-  box-shadow: 13px 8px 22px 5px rgba(0, 0, 0, 0.59); }
+  box-shadow: 13px 8px 22px 5px rgba(0, 0, 0, 0.59);
+  contain: strict; }
   #home h1 {
     width: 60vw;
     margin: 0 auto;
@@ -289,7 +302,6 @@ nav {
   #contact > #details {
     margin-top: 15px;
     margin-bottom: 15vh;
-    padding: 60px;
     background-color: rgba(0, 0, 0, 0.3); }
     #contact > #details > ul {
       text-align: center;
@@ -298,7 +310,6 @@ nav {
         font-size: 1.5rem;
         padding-bottom: 15px; }
       #contact > #details > ul > li {
-        width: 70%;
         padding: 10px;
         margin: 0 auto;
         font-size: 1.3rem;
@@ -334,12 +345,11 @@ nav {
       width: 40vw;
       height: 25vh;
       padding: 50px;
-      margin-top: 100px;
-      margin-left: 100px;
       background-color: rgba(0, 0, 0, 0); }
       #contact > #details > ul {
         width: 100%;
         padding: 50px;
+        padding-bottom: 100px;
         text-align: center;
         list-style: none;
         background-color: rgba(0, 0, 0, 0.3); }
@@ -350,6 +360,7 @@ nav {
           font-size: 1.5rem;
           width: 80%; }
         #contact > #details > ul > li:last-child:hover {
+          font-weight: bold;
           border-bottom: 3px red solid;
           cursor: pointer; } }
 #about-me {
@@ -429,16 +440,18 @@ nav {
   #footer {
     height: 15vh; } }
 @media (max-width: 1280px) and (orientation: portrait) {
-  #footer > span {
-    width: 50%; }
-    #footer > span > p {
-      font-size: 2.5rem; }
-    #footer > span a img {
-      width: 80px;
-      height: 80px; }
-  #footer > h1 {
-    margin-left: 10%;
-    font-size: 1.5rem; } }
+  #footer {
+    height: auto; }
+    #footer > span {
+      width: 50%; }
+      #footer > span > p {
+        font-size: 2.5rem; }
+      #footer > span a img {
+        width: 80px;
+        height: 80px; }
+    #footer > h1 {
+      margin-left: 10%;
+      font-size: 1.5rem; } }
 html {
   scroll-behavior: smooth; }
 
