--- a/styles/scss/_portfolio.scss
+++ b/styles/scss/_portfolio.scss
@@ -34,7 +34,6 @@
             margin-top: 35px;;
             width: 30vw;
             height: 5px;
-            background-color: rgba(0, 0, 0, 0.541);
         }
         h1{
             font-size: 3rem;
@@ -47,13 +46,19 @@
         width: 100%;
         display: grid;
         grid-template-columns: repeat(3, 1fr);
-        grid-auto-rows: 300px;
-        grid-gap: 5px;
+        grid-auto-rows: 350px;
+        grid-gap: 3px;
 
         .project{
+            background-repeat: no-repeat;
+            background-size: cover;
+            background-position: center;
             opacity: 0;
-            background-color: brown;
             contain: strict;
+            color: white;
+            h1,h2{
+                padding-top: 10px;
+            }
             ul{
                 padding-bottom: 5%;
             }
@@ -61,40 +66,57 @@
             li{
                 list-style: none;
                 font-size: 1.2rem;
+                font-weight: bold;
             }
 
             a{
                 font-size: 1.2rem;
-                padding: 20px;
-                padding-bottom: 5px;
-                color: black;
+                margin: 40px;
+                padding: 10px;
+                padding-bottom: 3px;
                 font-weight: bold;
                 text-decoration: none;
+                color: white;
+                border-bottom: 5px solid black;
 
                 &:hover{
-                    color: white;
-                    border-bottom: 2px solid red;
+                    border-bottom: 5px solid red;
                 }
             }
+        }
+
+        .project1{
+            background-image: url(../media/pictures/calc_project.PNG);
+        }
+
+        .project2{
+            background-image: url(../media/pictures/budgetary_app.PNG);
         }
     }
 }
 
 .project-cover{
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center;
     height: 100%;
 	width: 100%;
-	background-color: grey;
 	animation-name: slide-in;
 	animation-duration: 0.5s;
 	height: 100%;
-	z-index: 999;
 }
 
 
-.project:hover > .project-cover {
-	animation-name: slide-out;
-	animation-duration: 0.5s;
-	height: 0%;
+.project:hover {
+
+    box-shadow: inset 0 0 0 1000px rgba(0, 0, 0, 0.5);
+
+    > .project-cover {
+        animation-name: slide-out;
+        animation-duration: 0.5s;
+        height: 0;
+
+    }
 }
 
 
