--- a/styles/styles.css
+++ b/styles/styles.css
@@ -20,8 +20,7 @@
       margin: 25px;
       margin-top: 35px;
       width: 30vw;
-      height: 5px;
-      background-color: rgba(0, 0, 0, 0.541); }
+      height: 5px; }
     #portfolio > div:first-child h1 {
       font-size: 3rem;
       font-weight: bold; }
@@ -30,41 +29,55 @@
     width: 100%;
     display: grid;
     grid-template-columns: repeat(3, 1fr);
-    grid-auto-rows: 300px;
-    grid-gap: 5px; }
+    grid-auto-rows: 350px;
+    grid-gap: 3px; }
     #portfolio #projects-list .project {
+      background-repeat: no-repeat;
+      background-size: cover;
+      background-position: center;
       opacity: 0;
-      background-color: brown;
-      contain: strict; }
+      contain: strict;
+      color: white; }
+      #portfolio #projects-list .project h1, #portfolio #projects-list .project h2 {
+        padding-top: 10px; }
       #portfolio #projects-list .project ul {
         padding-bottom: 5%; }
       #portfolio #projects-list .project li {
         list-style: none;
-        font-size: 1.2rem; }
+        font-size: 1.2rem;
+        font-weight: bold; }
       #portfolio #projects-list .project a {
         font-size: 1.2rem;
-        padding: 20px;
-        padding-bottom: 5px;
-        color: black;
+        margin: 40px;
+        padding: 10px;
+        padding-bottom: 3px;
         font-weight: bold;
-        text-decoration: none; }
+        text-decoration: none;
+        color: white;
+        border-bottom: 5px solid black; }
         #portfolio #projects-list .project a:hover {
-          color: white;
-          border-bottom: 2px solid red; }
+          border-bottom: 5px solid red; }
+    #portfolio #projects-list .project1 {
+      background-image: url(../media/pictures/calc_project.PNG); }
+    #portfolio #projects-list .project2 {
+      background-image: url(../media/pictures/budgetary_app.PNG); }
 
 .project-cover {
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
   height: 100%;
   width: 100%;
-  background-color: grey;
   animation-name: slide-in;
   animation-duration: 0.5s;
-  height: 100%;
-  z-index: 999; }
+  height: 100%; }
 
-.project:hover > .project-cover {
-  animation-name: slide-out;
-  animation-duration: 0.5s;
-  height: 0%; }
+.project:hover {
+  box-shadow: inset 0 0 0 1000px rgba(0, 0, 0, 0.5); }
+  .project:hover > .project-cover {
+    animation-name: slide-out;
+    animation-duration: 0.5s;
+    height: 0; }
 
 @media screen and (max-width: 1200px) {
   #portfolio #projects-list {
