--- a/styles/scss/_aboutMe.scss
+++ b/styles/scss/_aboutMe.scss
@@ -12,9 +12,10 @@
     >p{
         width: 80%;
         padding-top: 2vh;
-        font-size: 1.5rem;
+        font-size: 2rem;
         border-bottom: 1px solid black;
         margin: auto;
+        font-family:'Times New Roman', Times, serif;
     }
 
     >span{
@@ -28,7 +29,8 @@
             width: 28%;
 
             p{
-                font-size: 1.25rem;
+                font-size: 1.5rem;
+                font-family:'Times New Roman', Times, serif;
             }
             img{
                 width: 100px;
