--- a/styles/styles.css
+++ b/styles/styles.css
@@ -37,7 +37,8 @@
       background-position: center;
       opacity: 0;
       contain: strict;
-      color: white; }
+      color: white;
+      border: 1px solid grey; }
       #portfolio #projects-list .project h1, #portfolio #projects-list .project h2 {
         padding-top: 10px; }
       #portfolio #projects-list .project ul {
@@ -61,6 +62,8 @@
       background-image: url(../media/pictures/calc_project.PNG); }
     #portfolio #projects-list .project2 {
       background-image: url(../media/pictures/budgetary_app.PNG); }
+    #portfolio #projects-list .project3 {
+      background-image: url(../media/pictures/portfolio_website.PNG); }
 
 .project-cover {
   background-repeat: no-repeat;
@@ -388,9 +391,10 @@ nav {
   #about-me > p {
     width: 80%;
     padding-top: 2vh;
-    font-size: 1.5rem;
+    font-size: 2rem;
     border-bottom: 1px solid black;
-    margin: auto; }
+    margin: auto;
+    font-family: 'Times New Roman', Times, serif; }
   #about-me > span {
     padding-top: 5vh;
     margin: auto;
@@ -400,7 +404,8 @@ nav {
     #about-me > span div {
       width: 28%; }
       #about-me > span div p {
-        font-size: 1.25rem; }
+        font-size: 1.5rem;
+        font-family: 'Times New Roman', Times, serif; }
       #about-me > span div img {
         width: 100px;
         height: 100px;
