--- a/styles/scss/_portfolio.scss
+++ b/styles/scss/_portfolio.scss
@@ -97,6 +97,10 @@
         .project3{
             background-image: url(../media/pictures/portfolio_website.PNG);
         }
+
+        .project4{
+            background-image: url(../media/pictures/todolist.PNG);
+        }
     }
 }
 
