update new project

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -66,6 +66,8 @@
       background-image: url(../media/pictures/portfolio_website.PNG); }
     #portfolio #projects-list .project4 {
       background-image: url(../media/pictures/todolist.PNG); }
+    #portfolio #projects-list .project5 {
+      background-image: url(../media/pictures/project_shop-min.PNG); }
 
 .project-cover {
   background-repeat: no-repeat;
