--- a/styles/scss/_portfolio.scss
+++ b/styles/scss/_portfolio.scss
@@ -101,6 +101,10 @@
         .project4{
             background-image: url(../media/pictures/todolist.PNG);
         }
+
+        .project5{
+            background-image: url(../media/pictures/project_shop-min.PNG);
+        }
     }
 }
 
